--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "repository": "mmpro/ac-redislock",
   "version": "1.0.0",
   "dependencies": {
-    "lodash": "^4.x",
+    "lodash": "^4.17.11",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "ac-conventional-changelog-template": "github:mmpro/ac-conventional-changelog-template.git",
-    "corp-semantic-release": "github:mmpro/corp-semantic-release.git",
-    "cz-customizable": "github:mmpro/cz-customizable.git",
-    "eslint": "^5.2.0",
-    "eslint-config-standard": "^11.x",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^7.x",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.x",
-    "expect": "^23.4.0",
+    "ac-conventional-changelog-template": "github:mmpro/ac-conventional-changelog-template",
+    "corp-semantic-release": "github:mmpro/corp-semantic-release",
+    "cz-customizable": "github:mmpro/cz-customizable",
+    "eslint": "^5.15.1",
+    "eslint-config-standard": "^12.x",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.x",
+    "eslint-plugin-promise": "^4.x",
+    "eslint-plugin-standard": "^4.x",
+    "expect": "^24.x",
     "husky": "^0.14.3",
-    "mocha": "^5.2.0",
+    "mocha": "^6.x",
     "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
-    "mocha-junit-reporter": "^1.17.0",
+    "mocha-junit-reporter": "^1.18.0",
     "mocha-multi-reporters": "^1.1.4"
   },
   "scripts": {
