chore(release): v1.0.1 [ci skip]

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "author": "Mark Poepping (https://www.mmpro.de)",
   "license": "MIT",
   "repository": "mmpro/ac-redislock",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "dependencies": {
+    "async": "^2.6.2",
     "lodash": "^4.17.11",
     "uuid": "^3.3.2"
   },
@@ -12,17 +13,17 @@
     "ac-conventional-changelog-template": "github:mmpro/ac-conventional-changelog-template",
     "corp-semantic-release": "github:mmpro/corp-semantic-release",
     "cz-customizable": "github:mmpro/cz-customizable",
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^12.x",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^8.x",
-    "eslint-plugin-promise": "^4.x",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.x",
-    "expect": "^24.x",
+    "expect": "^24.8.0",
     "husky": "^0.14.3",
-    "mocha": "^6.x",
+    "mocha": "^6.1.4",
     "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
-    "mocha-junit-reporter": "^1.18.0",
+    "mocha-junit-reporter": "^1.22.0",
     "mocha-multi-reporters": "^1.1.4"
   },
   "scripts": {
