--- a/package.json
+++ b/package.json
@@ -5,22 +5,18 @@
   "repository": "mmpro/ac-redislock",
   "version": "1.0.2",
   "dependencies": {
-    "async": "^2.6.2",
-    "lodash": "^4.17.11",
+    "async": "^3.1.0",
+    "lodash": "^4.17.15",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "ac-conventional-changelog-template": "github:mmpro/ac-conventional-changelog-template",
+    "chai": "^4.2.0",
     "corp-semantic-release": "github:mmpro/corp-semantic-release",
     "cz-customizable": "github:mmpro/cz-customizable",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.x",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^8.x",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.x",
-    "expect": "^24.8.0",
-    "husky": "^0.14.3",
+    "eslint": "^6.x",
+    "husky": "^3.0.9",
+    "ioredis": "^4.14.1",
     "mocha": "^6.1.4",
     "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
     "mocha-junit-reporter": "^1.22.0",
