--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "corp-semantic-release": "github:mmpro/corp-semantic-release",
     "cz-customizable": "github:mmpro/cz-customizable",
     "eslint": "^6.x",
-    "husky": "^3.0.9",
+    "husky": "^4.2.x",
     "ioredis": "^4.14.1",
-    "mocha": "^6.1.4",
+    "mocha": "^7.x",
     "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
     "mocha-junit-reporter": "^1.22.0",
     "mocha-multi-reporters": "^1.1.4"
