package(App): Updated packages | MP
Updated packages

--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "version": "1.0.9",
   "dependencies": {
     "ac-semantic-release": "^0.2.5",
-    "async": "^3.1.0",
-    "lodash": "^4.17.20",
-    "uuid": "^8.3.1"
+    "async": "^3.2.0",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^7.14.0",
-    "ioredis": "^4.19.2",
-    "mocha": "^8.2.x",
-    "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter"
+    "chai": "^4.3.4",
+    "eslint": "^7.25.0",
+    "ioredis": "^4.27.2",
+    "mocha": "^8.4.x",
+    "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
+    "nyc": "^15.1.0"
   },
   "scripts": {
     "test": "mocha --reporter spec",
-    "test-jenkins": "JUNIT_REPORT_PATH=./report.xml mocha --colors --reporter mocha-jenkins-reporter --reporter-options junit_report_name='ByteConverter'"
+    "test-jenkins": "JUNIT_REPORT_PATH=./report.xml mocha --colors --reporter mocha-jenkins-reporter --reporter-options junit_report_name='RedisLock'",
+    "coverage": "nyc yarn run test"
   },
   "engines": {
     "node": ">=10.0.0"
