--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
   "name": "ac-redislock",
-  "author": "Mark Poepping (https://www.mmpro.de)",
+  "author": "Mark Poepping (https://www.admiralcloud.de)",
   "license": "MIT",
-  "repository": "mmpro/ac-redislock",
+  "repository": "admiralcloud/ac-redislock",
   "version": "1.0.10",
   "dependencies": {
-    "ac-semantic-release": "^0.2.5",
-    "async": "^3.2.0",
+    "ac-semantic-release": "^0.2.6",
+    "async": "^3.2.1",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "eslint": "^7.25.0",
-    "ioredis": "^4.27.2",
-    "mocha": "^8.4.x",
-    "mocha-jenkins-reporter": "github:mmpro/mocha-jenkins-reporter",
+    "eslint": "^7.32.0",
+    "ioredis": "^4.27.10",
+    "mocha": "^9.1.x",
     "nyc": "^15.1.0"
   },
   "scripts": {
     "test": "mocha --reporter spec",
-    "test-jenkins": "JUNIT_REPORT_PATH=./report.xml mocha --colors --reporter mocha-jenkins-reporter --reporter-options junit_report_name='RedisLock'",
     "coverage": "nyc yarn run test"
   },
   "engines": {
