--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "repository": "admiralcloud/ac-redislock",
   "version": "4.0.0",
   "dependencies": {
-    "ac-semantic-release": "^0.4.3",
+    "ac-custom-error": "^1.0.3",
+    "ac-semantic-release": "^0.4.6",
     "async": "^3.2.6",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
-    "uuid": "^11.0.3"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "chai": "^4.5.0",
-    "eslint": "^9.16.0",
-    "ioredis": "^5.4.1",
-    "mocha": "^11.0.x",
+    "eslint": "^9.26.0",
+    "ioredis": "^5.6.1",
+    "mocha": "^11.2.x",
     "nyc": "^17.1.0"
   },
   "scripts": {
@@ -24,5 +25,6 @@
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
