--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "admiralcloud/ac-redislock",
   "version": "6.0.1",
   "dependencies": {
-    "ac-custom-error": "^1.0.5",
+    "ac-custom-error": "^1.0.6",
     "ac-semantic-release": "^0.4.10",
     "async": "^3.2.6",
     "lodash": "^4.17.23",
@@ -25,6 +25,9 @@
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "resolutions": {
+    "mocha/diff": "^8.0.3"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
